2.6.3
-----


2.6.2
-----
(RB=484780)
Fixed a bug in typeref processing in request params.

(RB=490692)
Prepare data template generator for extension.

2.6.1
------
(RB=477748)
Remove unused dependency to mina-core.

(RB=484311)
Factor out compression filter implementations to a new module (r2-filter-compression).

(RB=484411)
Remove unnecessary generator dependency from modules that generates data template.
Remove unnecessary data-avro-generator dependency from modules that generates avro schema.

(RB=484897)
Create IOUtil class to remove r2-core's dependency on commons-io.

(RB=490213)
Fix trackerclient deleting racing problem.

2.6.0
------
(RB=475062)
Factor out PatchRequestRecorder and related classes into a new module (restli-client-util-recorder).

(RB=476293)
Take out ParSeqRestClient into a separate module (restli-client-parseq).

2.5.1
------
(RB=478810)
Fixed a bug in processing of custom types in association resource keys.

(RB=478809)
Handle error responses and batch results correctly in output validation filter.

(RB=475504)
Broke down r2 into r2-core and r2-netty.
Removed dependency on json and jackson core from some modules.

(RB=481030)
Fix bug that request builder generator may generate duplicate data template class.

2.5.0
------
(RB=475440 cont')
Make ChannelPoolHander iterate through all connection tokens.

(RB=438141)
Modify content-encoding and content-length headers when decompressing body.

(RB=445269)
New finer-grain data template and request builder generator classes and structure.

2.4.4
------
(RB=475440)
Fix a bug in ChannelPoolHandler where it should NOT put a channel back to the pool if
there is a "connection:close" header in the response.

(RB=444340)
Rest.li data validator, ReadOnly and CreateOnly Rest.li data annotations.

2.4.3
------
(RB=468269)
Remove try-catch in parseAcceptEncodingHeader().

(RB=475642)
Removing unused title field from the Link.pdsc.

2.4.2
------
(RB=473188)